# jadnschema

./: .gitignore  .pylintrc  ReadMe.md  lint.html  lint_test_doc.sh  mkdocs.py  oc2ls-v1.1-lang_resolved.dev.jadn  oc2ls-v1.1-lang_resolved.jadn  oc2ls_v11.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py
jadnschema/: __init__.py  exceptions.py  jadn.py  utils.py
jadnschema/convert/: __init__.py  constants.py  enums.py  helpers.py
jadnschema/data/: jadn-v1.0-examples.jadn  scripts.js  theme.css  theme.less
jadnschema/schema/: __init__.py  baseModel.py  consts.py  extensions.py  info.py  schema.py
jadnschema/utils/: __init__.py  enums.py  ext_dicts.py  general.py
tests/: __init__.py  definition_order.txt  test_codec.py  test_convert.py  test_extras.py  test_jadn.py  test_message.py  test_transform.py  test_validator.py
tests/message/: format_dump.py  query_pairs.bencode  query_pairs.binn  query_pairs.bson  query_pairs.cbor  query_pairs.edn  query_pairs.ion  query_pairs.json  query_pairs.msgpack  query_pairs.sexp  query_pairs.smile  query_pairs.toml  query_pairs.ubjson  query_pairs.xml  query_pairs.yaml
tests/schema/: convert_types.jadn  jadn-v1.0-examples-uni.jadn  oc2ls-v1.1-lang_resolved.jadn  oc2slpf-v1.0.1-resolved.jadn  reorg.py
tests/schema_gen/: oc2ls-v1.1-lang_resolved.all.cddl  oc2ls-v1.1-lang_resolved.all.const.ref.json  oc2ls-v1.1-lang_resolved.all.enum.ref.json  oc2ls-v1.1-lang_resolved.all.jadn  oc2ls-v1.1-lang_resolved.all.jas  oc2ls-v1.1-lang_resolved.all.proto  oc2ls-v1.1-lang_resolved.all.regex.ref.json  (+13 more)
(+68 files in other folders)
