[bdist_wheel]
universal=1

[metadata]
name = jadn_schema
version = 0.2.0
description = JADN Schema Translator & Validator
# long_description = file: ReadMe.md
# long_description_content_type="text/markdown"
classifiers =
  Development Status :: 5 - Development/Beta
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Security :: Translation :: Validation

[options]
include_package_data = true
packages = find:
python_requires= >=3.7, <4
setup_requires = setuptools_scm

[options.packages.find]
exclude =
    tests

# [options.entry_points]
# console_scripts =
#   jadnschema = jadnschema.cli:main
